Used Sqlite so DB can be uploaded

--- a/Cookbook/appsettings.json
+++ b/Cookbook/appsettings.json
@@ -5,7 +5,8 @@
     }
   },
   "ConnectionString": {
-    "CookbookDB": "Data Source=DELL-PC\\SQLEXPRESS;Initial Catalog=Cookbook;Integrated Security=True"
+    "CookbookDB": "Data Source=DELL-PC\\SQLEXPRESS;Initial Catalog=Cookbook;Integrated Security=True",
+    "CookbookSqliteDB": "Data Source=cookbook.db"
   },
   "AllowedHosts": "*"
 }
